--- a/tsconfig.generate.json
+++ b/tsconfig.generate.json
@@ -1,19 +1,9 @@
 {
   "extends": "@tsconfig/node16/tsconfig.json",
-  "ts-node": {
-    // It is faster to skip typechecking.
-    // Remove if you want ts-node to do typechecking.
-    "transpileOnly": true,
-    "files": true,
-    "compilerOptions": {
-      // compilerOptions specified here will override those declared below,
-      // but *only* in ts-node.  Useful if you want ts-node and tsc to use
-      // different options with a single tsconfig.json.
-    }
-  },
+  "include": ["src-generate"],
   "compilerOptions": {
     "rootDir": "src-generate",
-    "outDir": "dist/bin",
+    "outDir": "bin",
     "strict": true
   }
 }
