--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dropify",
   "author": "Moran Santiago <santiago@basement.studio>",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": "git://github.com/basementstudio/react-dropify.git",
   "module": "./dist/react-dropify.esm.js",
   "main": "./dist/index.js",
@@ -11,6 +11,7 @@
   },
   "files": [
     "dist",
+    "bin",
     "generate.d.ts"
   ],
   "engines": {
