--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dropify",
   "author": "Moran Santiago <santiago@basement.studio>",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "repository": "git://github.com/basementstudio/react-dropify.git",
   "module": "./dist/react-dropify.esm.js",
   "main": "./dist/index.js",
@@ -48,12 +48,22 @@
       "limit": "10 KB"
     }
   ],
-  "devDependencies": {
+  "dependencies": {
     "@graphql-codegen/cli": "^2.3.0",
     "@graphql-codegen/introspection": "^2.1.0",
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-graphql-request": "^4.3.2",
     "@graphql-codegen/typescript-operations": "^2.2.1",
+    "arg": "^5.0.1",
+    "dotenv": "^16.0.0",
+    "graphql": "^16.3.0",
+    "graphql-request": "^3.7.0",
+    "graphql-tag": "^2.12.6",
+    "swr": "^1.1.1",
+    "zod": "^3.14.4",
+    "zustand": "^3.7.1"
+  },
+  "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.4",
     "@tsconfig/node16": "^1.0.2",
     "@types/node": "^17.0.24",
@@ -61,8 +71,6 @@
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "arg": "^5.0.1",
-    "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.0.2",
     "eslint-config-prettier": "^8.3.0",
@@ -80,15 +88,7 @@
     "size-limit": "^7.0.4",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "zod": "^3.14.4"
-  },
-  "dependencies": {
-    "graphql": "^16.3.0",
-    "graphql-request": "^3.7.0",
-    "graphql-tag": "^2.12.6",
-    "swr": "^1.1.1",
-    "zustand": "^3.7.1"
+    "typescript": "^4.5.4"
   },
   "prettier": {
     "semi": false,
