--- a/default-gql-codegen.yml
+++ b/default-gql-codegen.yml
@@ -1,11 +1,11 @@
 overwrite: true
 schema:
-  - ${SHOPIFY_STOREFRONT_GRAPHQL_ENDPOINT}:
+  - https://${SHOPIFY_STOREFRONT_GRAPHQL_DOMAIN}/api/2021-10/graphql:
       headers:
         x-shopify-storefront-access-token: ${SHOPIFY_STOREFRONT_ACCESS_TOKEN}
 generates:
   ./src/lib/shopify/storefront/generated.ts:
-    documents: './src/lib/shopify/storefront/**/*.{gql,graphql}'
+    documents: './default-gql/**/*.{gql,graphql}'
     plugins:
       - 'typescript'
       - 'typescript-operations'
