--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-graphql-request": "^4.3.2",
     "@graphql-codegen/typescript-operations": "^2.2.1",
+    "@tanstack/react-query": "^4.2.1",
     "arg": "^5.0.1",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
