--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "size-limit": "^7.0.4",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
+    "type-fest": "^3.0.0",
     "typescript": "^4.8.4"
   },
   "prettier": {
