--- a/package.json
+++ b/package.json
@@ -1,191 +1,29 @@
 {
-  "name": "react-dropify",
-  "author": "Moran Santiago <santiago@basement.studio>",
-  "version": "0.0.48",
-  "repository": "git://github.com/basementstudio/react-dropify.git",
-  "module": "./dist/react-dropify.esm.js",
-  "main": "./dist/index.js",
-  "typings": "./dist/index.d.ts",
-  "bin": {
-    "react-dropify": "./bin/index.js"
-  },
-  "files": [
-    "dist",
-    "bin",
-    "generate.d.ts",
-    "default-gql"
+  "name": "commerce-toolkit",
+  "namespace": "@bsmnt",
+  "private": true,
+  "version": "0.0.0",
+  "workspaces": [
+    "examples/*",
+    "packages/*",
+    "internal/*"
   ],
-  "engines": {
-    "node": ">=12"
-  },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "yarn build:react && yarn build:generate",
-    "build:react": "yarn gql-codegen && tsdx build",
-    "build:generate": "tsc --project tsconfig.generate.json",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "eslint ./src --ext .ts,.tsx,.js,.jsx ",
-    "lint:fix": "yarn lint --fix",
-    "prepare": "yarn build",
-    "size": "size-limit",
-    "analyze": "size-limit --why",
-    "gql-codegen": "graphql-codegen --config default-gql-codegen.yml -r dotenv/config"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
-  "size-limit": [
-    {
-      "path": "dist/react-dropify.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/react-dropify.esm.js",
-      "limit": "10 KB"
-    }
-  ],
-  "peerDependencies": {
-    "react": ">=16"
-  },
-  "dependencies": {
-    "@graphql-codegen/cli": "^2.3.0",
-    "@graphql-codegen/introspection": "^2.1.0",
-    "@graphql-codegen/typescript": "^2.4.1",
-    "@graphql-codegen/typescript-graphql-request": "^4.3.2",
-    "@graphql-codegen/typescript-operations": "^2.2.1",
-    "@tanstack/react-query": "^4.2.1",
-    "arg": "^5.0.1",
-    "dotenv": "^16.0.0",
-    "graphql": "^16.3.0",
-    "graphql-request": "^3.7.0",
-    "graphql-tag": "^2.12.6",
-    "swr": "^1.1.1",
-    "zod": "^3.14.4",
-    "zustand": "^4.1.1"
+    "build": "turbo run build",
+    "build:packages": "turbo run build --filter=@bsmnt/storefront-hooks --filter=@bsmnt/sdk-gen",
+    "dev": "turbo run dev --parallel",
+    "lint": "turbo run lint",
+    "generate": "turbo run generate",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^7.0.4",
-    "@tsconfig/node16": "^1.0.2",
-    "@types/node": "^17.0.24",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
-    "eslint": "^8.24.0",
-    "eslint-config-next": "^12.0.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^7.0.4",
-    "prettier": "^2.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "size-limit": "^7.0.4",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.3.1",
-    "type-fest": "^3.0.0",
-    "typescript": "^4.8.4"
+    "eslint-config-custom": "*",
+    "prettier": "latest",
+    "turbo": "latest"
   },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "arrowParens": "always",
-    "tabWidth": 2,
-    "printWidth": 80,
-    "trailingComma": "none"
+  "engines": {
+    "node": "16.x"
   },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "react",
-      "react-hooks",
-      "simple-import-sort",
-      "@typescript-eslint"
-    ],
-    "ignorePatterns": [],
-    "extends": [
-      "eslint:recommended",
-      "plugin:import/recommended",
-      "plugin:import/typescript",
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended",
-      "prettier",
-      "plugin:prettier/recommended"
-    ],
-    "env": {
-      "es6": true,
-      "browser": true,
-      "node": true
-    },
-    "rules": {
-      "react/react-in-jsx-scope": 0,
-      "react/display-name": 0,
-      "react/prop-types": 0,
-      "@typescript-eslint/explicit-function-return-type": 0,
-      "@typescript-eslint/explicit-member-accessibility": 0,
-      "@typescript-eslint/indent": 0,
-      "@typescript-eslint/member-delimiter-style": 0,
-      "@typescript-eslint/no-explicit-any": 0,
-      "@typescript-eslint/no-var-requires": 0,
-      "@typescript-eslint/no-use-before-define": 0,
-      "@typescript-eslint/ban-ts-comment": 0,
-      "simple-import-sort/imports": "error",
-      "simple-import-sort/exports": "error",
-      "react-hooks/exhaustive-deps": "warn",
-      "react/no-unescaped-entities": 0,
-      "curly": [
-        "error",
-        "multi-line"
-      ],
-      "react/jsx-no-target-blank": [
-        2,
-        {
-          "allowReferrer": true
-        }
-      ],
-      "@typescript-eslint/no-unused-vars": [
-        2,
-        {
-          "argsIgnorePattern": "^_"
-        }
-      ],
-      "no-console": [
-        1,
-        {
-          "allow": [
-            "warn",
-            "error"
-          ]
-        }
-      ],
-      "prettier/prettier": [
-        "warn"
-      ],
-      "@typescript-eslint/explicit-module-boundary-types": "off"
-    },
-    "settings": {
-      "import/parsers": {
-        "@typescript-eslint/parser": [
-          ".ts",
-          ".tsx"
-        ]
-      },
-      "import/resolver": {
-        "typescript": {
-          "alwaysTryTypes": true,
-          "project": "."
-        }
-      },
-      "react": {
-        "version": "detect"
-      }
-    }
-  }
+  "dependencies": {},
+  "packageManager": "yarn@1.22.19"
 }
