--- a/examples/nextjs-shopify/package.json
+++ b/examples/nextjs-shopify/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "yarn sdk-gen generate --dir shopify/sdk"
+    "generate": "yarn sdk-gen generate --dir src/storefront/gql-sdk"
   },
   "dependencies": {
     "@bsmnt/drop": "*",
