--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "generate": "turbo run generate",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "version:packages": "yarn changeset version",
+    "release": "yarn build:packages && yarn changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.22.0",
     "eslint-config-custom": "*",
     "prettier": "latest",
     "turbo": "latest"
