add @bsmnt/sdk-gen as a dev dependency in shopify example

--- a/internal/eslint-config-custom/package.json
+++ b/internal/eslint-config-custom/package.json
@@ -2,7 +2,7 @@
   "name": "eslint-config-custom",
   "version": "0.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "private": true,
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
