improve react peer dependency definition

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -16,8 +16,8 @@
   },
   "peerDependencies": {
     "@tanstack/react-query": ">=4",
-    "react": ">=16",
-    "react-dom": ">=16"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {},
   "devDependencies": {
