update changeset base branch

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "access": "public",
   "updateInternalDependencies": "patch",
   "ignore": [],
-  "baseBranch": "jb/turborepo"
+  "baseBranch": "main"
 }
