--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bsmnt/storefront-hooks",
   "author": "basement.studio <dev@basement.studio>",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "files": [
     "dist/**/*"
   ],
@@ -16,8 +16,8 @@
   },
   "peerDependencies": {
     "@tanstack/react-query": ">=4",
-    "react": ">=16",
-    "react-dom": ">=16"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {},
   "devDependencies": {
