Adding version entry to shopify example

--- a/examples/nextjs-shopify/package.json
+++ b/examples/nextjs-shopify/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nextjs-shopify",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
