--- a/examples/nextjs-localstorage/package.json
+++ b/examples/nextjs-localstorage/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "examples-ui": "*",
+    "@bsmnt/storefront-hooks": "*",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
