update nextjs-shopify example

--- a/examples/nextjs-shopify/tsconfig.json
+++ b/examples/nextjs-shopify/tsconfig.json
@@ -1,11 +1,20 @@
 {
-  "exclude": ["node_modules"],
-  "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "dist",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
     "strict": true,
-    "alwaysStrict": true
+    "alwaysStrict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "incremental": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve"
   },
-  "include": ["src", "next-env.d.ts"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
