--- a/examples/nextjs-shopify/package.json
+++ b/examples/nextjs-shopify/package.json
@@ -8,20 +8,20 @@
     "build:analyze": "cross-env ANALYZE=true yarn build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "yarn sdk-gen generate --dir src/storefront/sdk-gen"
+    "generate": "yarn sdk-gen generate --dir src/storefront/sdk-gen",
+    "postinstall": "yarn generate"
   },
   "dependencies": {
     "@bsmnt/drop": "*",
     "@bsmnt/storefront-hooks": "*",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@bsmnt/sdk-gen": "*",
-    "@next/bundle-analyzer": "^12.2.5",
+    "@next/bundle-analyzer": "^13.1.6",
     "cross-env": "^7.0.3",
-    "tsconfig": "*",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   }
 }
