--- a/examples/nextjs-localstorage/package.json
+++ b/examples/nextjs-localstorage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs-localstorage",
-  "version": "0.1.0",
+  "version": "0.1.1-next.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bsmnt/storefront-hooks": "*",
+    "@bsmnt/storefront-hooks": "1.3.1-next.0",
     "examples-ui": "*",
     "next": "12.3.1",
     "react": "18.2.0",
