--- a/examples/nextjs-shopify/package.json
+++ b/examples/nextjs-shopify/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjs-shopify",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1-next.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,14 +12,14 @@
     "postinstall": "yarn generate"
   },
   "dependencies": {
-    "@bsmnt/drop": "*",
-    "@bsmnt/storefront-hooks": "*",
+    "@bsmnt/drop": "1.2.1-next.0",
+    "@bsmnt/storefront-hooks": "1.3.1-next.0",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@bsmnt/sdk-gen": "*",
+    "@bsmnt/sdk-gen": "2.0.0-next.0",
     "@next/bundle-analyzer": "^13.1.6",
     "cross-env": "^7.0.3",
     "typescript": "^4.9.5"
