--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bsmnt/storefront-hooks",
   "author": "basement.studio <dev@basement.studio>",
-  "version": "1.3.0",
+  "version": "1.3.1-next.0",
   "files": [
     "dist/**/*"
   ],
