--- a/packages/sdk-gen/package.json
+++ b/packages/sdk-gen/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bsmnt/sdk-gen",
   "author": "basement.studio <dev@basement.studio>",
-  "version": "1.2.5",
+  "version": "2.0.0-next.0",
   "main": "./dist/index.js",
   "types": "./dist/types.d.ts",
   "bin": {
