--- a/examples/nextjs-shopify/package.json
+++ b/examples/nextjs-shopify/package.json
@@ -11,14 +11,14 @@
     "generate": "yarn sdk-gen generate --dir src/storefront/sdk-gen"
   },
   "dependencies": {
-    "@bsmnt/drop": "1.2.1-next.0",
-    "@bsmnt/storefront-hooks": "1.3.1-next.0",
+    "@bsmnt/drop": "*",
+    "@bsmnt/storefront-hooks": "*",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@bsmnt/sdk-gen": "2.0.0-next.0",
+    "@bsmnt/sdk-gen": "*",
     "@next/bundle-analyzer": "^13.1.6",
     "cross-env": "^7.0.3",
     "typescript": "^4.9.5"
