--- a/examples/nextjs-localstorage/package.json
+++ b/examples/nextjs-localstorage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs-localstorage",
-  "version": "0.1.1-next.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
