--- a/examples/nextjs-shopify/package.json
+++ b/examples/nextjs-shopify/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjs-shopify",
   "private": true,
-  "version": "0.1.1-next.0",
+  "version": "0.1.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
