--- a/packages/drop/package.json
+++ b/packages/drop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bsmnt/drop",
   "author": "basement.studio <dev@basement.studio>",
-  "version": "1.2.1-next.0",
+  "version": "1.2.1",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
