--- a/packages/shopify-helpers/package.json
+++ b/packages/shopify-helpers/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bsmnt/shopify-helpers",
   "author": "basement.studio <dev@basement.studio>",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "files": [
     "dist/**/*"
   ],
@@ -21,7 +21,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@bsmnt/sdk-gen": "*",
+    "@bsmnt/sdk-gen": "2.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
@@ -29,6 +29,6 @@
     "tsconfig": "*",
     "tsup": "^6.2.3",
     "type-fest": "^3.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   }
 }
