--- a/packages/sdk-gen/package.json
+++ b/packages/sdk-gen/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bsmnt/sdk-gen",
   "author": "basement.studio <dev@basement.studio>",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "main": "./dist/index.js",
   "types": "./dist/types.d.ts",
   "bin": {
@@ -17,7 +17,7 @@
   },
   "peerDependencies": {},
   "dependencies": {
-    "@genql/cli": "^3.0.5",
+    "@genql/cli": "6.0.0",
     "arg": "^5.0.1",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
