--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -20,11 +20,11 @@
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "js-cookie": "^3.0.1"
+    "js-cookie": "^3.0.1",
+    "@types/js-cookie": "^3.0.3"
   },
   "devDependencies": {
     "@tanstack/react-query": "^4.10.3",
-    "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
