--- a/examples/nextjs-shopify/package.json
+++ b/examples/nextjs-shopify/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:analyze": "cross-env ANALYZE=true yarn build",
+    "build:analyze": "cross-env ANALYZE=true pnpm build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "yarn sdk-gen --dir src/storefront/sdk-gen"
+    "generate": "pnpm sdk-gen --dir src/storefront/sdk-gen"
   },
   "dependencies": {
     "@bsmnt/drop": "*",
