--- a/packages/shopify-helpers/package.json
+++ b/packages/shopify-helpers/package.json
@@ -11,9 +11,9 @@
   "source": "./src/index.ts",
   "sideEffects": false,
   "scripts": {
-    "dev": "yarn build --watch",
+    "dev": "pnpm build --watch",
     "build": "tsup ./src/index.ts --format esm,cjs --dts",
-    "generate": "yarn sdk-gen --dir src/sdk-gen"
+    "generate": "pnpm sdk-gen --dir src/sdk-gen"
   },
   "peerDependencies": {
     "react": ">=16",
