Update TypeScript configuration paths to reference internal tsconfig files

--- a/examples/nextjs-localstorage/tsconfig.json
+++ b/examples/nextjs-localstorage/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "exclude": ["node_modules"],
-  "extends": "tsconfig/nextjs.json",
+  "extends": "../../internal/tsconfig/nextjs.json",
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "dist",
