--- a/packages/shopify-helpers/tsconfig.json
+++ b/packages/shopify-helpers/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/react-library.json",
+  "extends": "../../internal/tsconfig/react-library.json",
   "include": ["src", "src/sdk-gen/config.js"],
   "exclude": ["dist", "node_modules"],
   "compilerOptions": {
