--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/react-library.json",
+  "extends": "../../internal/tsconfig/react-library.json",
   "include": ["src"],
   "exclude": ["dist", "node_modules"]
 }
