--- a/packages/sdk-gen/tsconfig.json
+++ b/packages/sdk-gen/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/base.json",
+  "extends": "../../internal/tsconfig/base.json",
   "include": ["."],
   "exclude": ["dist", "node_modules"]
 }
